--- a/mongo/mongo-secret.yaml
+++ b/mongo/mongo-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mongo-secret
+type: Opaque
 data:
-  mongo-user: bW9uZ291c2Vy
-  mongo-password: bW9uZ29wYXNzd29yZA==
+  mongo-root-user: YWRtaW4=
+  mongo-root-password: bW9uZ28tcGFzc3dvcmQ=
