--- a/mongo/mongo.yaml
+++ b/mongo/mongo.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: mongo
-          image: mongo:5.0.5
+          image: mongo
           ports:
             - containerPort: 27017
           env:
@@ -24,12 +24,12 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: mongo-secret
-                  key: mongo-user
+                  key: mongo-root-user
             - name: MONGO_INITDB_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: mongo-secret
-                  key: mongo-password
+                  key: mongo-root-password
 
 ---
 apiVersion: v1
